# msvc-asan-bug

./: CMakeLists.txt  README.md
.github/workflows/: demo.yml
code/: CMakeLists.txt
code/dnmx/: api.h  basic_domain.h  domain.h  domain_handle.h  feature_info.h  mixin_info.h
code/dynamix/: allocator.hpp  domain-c.cpp  domain.cpp  domain.hpp  exception.cpp  exception.hpp  feature_info.hpp  mixin_info.hpp
scratch/: CMakeLists.txt  c-scratch.c
